--- a/css/training.less
+++ b/css/training.less
@@ -167,7 +167,7 @@ img{
 .saishi_text{
     width: 64%;
     float: right;
-    h2,p{
+    h2,.mui-text-justify{
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
@@ -181,7 +181,7 @@ img{
         font-weight: bold;
         margin-top: 1px;
     }
-    >p{
+    >.mui-text-justify{
         height: 0.8rem;
         line-height: 0.4rem;
         font-size: 0.28rem;
