--- a/css/newList.css
+++ b/css/newList.css
@@ -121,11 +121,10 @@ html,body{
 	border:1px solid #eaeaea;
 }
 .mui-table-view-cell{
-	height:1.8rem;
+	/*height:1.8rem;*/
 	line-height:1.8rem;
 	padding:0.17rem 0.25rem;
 	display:inherit;
-
 	border-bottom: 1px solid #eaeaea;
 }
 .viewcellHeight{
@@ -193,8 +192,9 @@ html,body{
 	margin-top:-0.3rem;
 	margin-bottom:0.17rem;
 	height:1.36rem;
+	overflow: hidden;
 }
-.viewcellHeight #purelyImg img{
+#purelyImg img{
 	width:2.2rem;
 	display:inline-block;
 }
