培训、赛事、公告、新闻的详情页

--- a/css/training.css
+++ b/css/training.css
@@ -39,6 +39,9 @@ textarea {
 img {
   max-width: 100%;
 }
+.overflow {
+  overflow: hidden;
+}
 .current-position {
   line-height: 30px;
   text-align: center;
