--- a/css/training.less
+++ b/css/training.less
@@ -35,6 +35,9 @@ body, input, select, button, textarea {font-family:MicrosoftYaHei;}
 img{
     max-width: 100%;
 }
+.overflow{
+    overflow: hidden;
+}
 
 //当前位置
 .current-position{
