--- a/css/searchList.css
+++ b/css/searchList.css
@@ -1,9 +1,10 @@
 .mxhLi{
-	height:1.8rem;
+	/*height:1.8rem;*/
 	line-height:1.8rem;
 	padding:0.17rem 0.25rem;
 	display:inherit;
 	border-bottom: 1px solid #eaeaea;
+	overflow: hidden;
 }
 .viewcellHeight{
 	height:3.1rem;
@@ -41,7 +42,7 @@
 	line-height:0.3rem;
 	float:left;
 	height:100%;
-	width:2.7rem;
+	width:2.8rem;
 }
  span.lookRight{
 	line-height:0.3rem;
@@ -74,6 +75,10 @@
 	margin-top:-0.3rem;
 	margin-bottom:0.17rem;
 	height:1.36rem;
+}
+.muipurelyImg img{
+	width: 32%;
+	display: inline-block;
 }
 .viewcellHeight #purelyImg img{
 	width:2.2rem;
