--- a/css/training.less
+++ b/css/training.less
@@ -1,27 +1,60 @@
-body, input, select, button, textarea {font-family:MicrosoftYaHei;}
+body,
+input,
+select,
+button,
+textarea {
+    font-family: MicrosoftYaHei;
+}
+
 //选项卡
-.mui-segmented-control.mui-scroll-wrapper .mui-control-item{
+.mui-segmented-control.mui-scroll-wrapper .mui-control-item {
     width: 33%;
 }
-.mui-table-view-cell:after{
+
+.mui-table-view-cell:after {
     left: 0;
 }
-.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active{
+
+.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
     transition: all 0.2s linear;
     -webkit-transition: all 0.2s linear;
     -moz-transition: all 0.2s linear;
     -ms-transition: all 0.2s linear;
     -o-transition: all 0.2s linear;
 }
-.fontColor-blue{
+
+.mui-content {
+    margin-top: 38px;
+}
+
+.mui-fullscreen {
+    position: inherit;
+}
+
+.mui-slider-indicator.mui-segmented-control {
+    position: fixed;
+}
+
+.mui-scroll {
+    position: inherit;
+}
+
+.mui-fullscreen .mui-segmented-control~.mui-slider-group {
+    position: inherit;
+}
+
+.fontColor-blue {
     color: #3385ff;
 }
-.mt15{
+
+.mt15 {
     margin-top: 0.15rem;
 }
-.mt30{
+
+.mt30 {
     margin-top: 0.3rem;
 }
+
 .clearfix:before {
     content: '';
     display: block;
@@ -32,86 +65,91 @@ body, input, select, button, textarea {font-family:MicrosoftYaHei;}
     display: table;
     clear: both;
 }
-img{
+
+img {
     max-width: 100%;
 }
-.overflow{
+
+.overflow {
     overflow: hidden;
 }
 
 //当前位置
-.current-position{
+.current-position {
     line-height: 30px;
     text-align: center;
     background: #f5f5f5;
 }
+
 //培训列表
-.peixun_list{
+.peixun_list {
     padding: 0 3%;
     overflow: hidden;
-    >h2{
+    >h2 {
         font-size: 20px;
         color: #333;
         font-weight: 400;
         line-height: 30px;
-        a{
+        a {
             color: #333;
         }
     }
-    >p{
+    >p {
         color: #7e7e7e;
         line-height: 25px;
     }
-    >div{
+    >div {
         margin: 5px 0 10px;
         overflow: hidden;
-        .peixun_p{
+        .peixun_p {
             width: auto;
             line-height: 35px;
             font-size: 14px;
             float: left;
         }
-        >button{
+        >button {
             border-radius: 5px;
             float: right;
         }
     }
 }
+
 //培训内容页标题
-.peixun_info{
-    >h1{
+.peixun_info {
+    >h1 {
         line-height: 30px;
         padding-bottom: 30px;
         margin-top: 0;
     }
-    >h2{
+    >h2 {
         line-height: 30px;
     }
-    >div{
+    >div {
         line-height: 30px;
         overflow: hidden;
-        >i{
+        >i {
             width: 30px;
             display: inline-block;
         }
-        >p{
+        >p {
             color: #666;
             font-size: 16px;
             display: inline-block;
         }
-        >span{
+        >span {
             color: #999;
             font-size: 14px;
             float: right;
         }
     }
 }
+
 //培训信息
-.peixun_new{
+.peixun_new {
     margin-top: 25px;
-    >h2{
+    >h2 {
         line-height: 30px;
-        >i{
+        >i {
             width: 4px;
             height: 15px;
             background: #3386ff;
@@ -120,108 +158,115 @@ img{
             display: inline-block;
         }
     }
-    >p{
+    >p {
         text-indent: 30px;
     }
 }
 
 //报名input
-.peixun_Input{
+.peixun_Input {
     border: 1px solid #c8c7cc;
     border-radius: 8px;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     margin-bottom: 10px;
-    >label{
+    >label {
         border-right: 1px solid #C8C7CC;
     }
-    >input{
+    >input {
         font-size: 14px;
         text-indent: 15px;
     }
 }
+
 //按钮
-.button-margin{
+.button-margin {
     margin-top: 30px;
 }
+
 //备注
-.note{
+.note {
     background: #f5f5f5;
     font-size: 14px;
     padding: 11px 15px;
     margin: 15px 0 20px;
 }
+
 //注册
 //赛事列表
-
-.schedule_list{
+.schedule_list {
     overflow: hidden;
-    >p{ 
-        width: auto; 
+    >p {
+        width: auto;
         font-size: 0.3rem;
-        &:first-child{
+        &:first-child {
             float: left;
         }
-        &:last-child{
+        &:last-child {
             float: right;
         }
     }
 }
+
 //赛事
-.saishi_text{
+.saishi_text {
     width: 64%;
     float: right;
-    h2,.mui-text-justify{
+    h2,
+    .mui-text-justify {
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
     }
-    >h2{
+    >h2 {
         font-size: 0.34rem;
         height: 0.95rem;
         line-height: 0.5rem;
         font-weight: bold;
         margin-top: 1px;
     }
-    >.mui-text-justify{
+    >.mui-text-justify {
         height: 0.8rem;
         line-height: 0.4rem;
         font-size: 0.28rem;
     }
 }
-.saishi_time{
+
+.saishi_time {
     margin: 5px 0 10px;
     overflow: hidden;
-    .peixun_p{
+    .peixun_p {
         width: auto;
         line-height: 35px;
         font-size: 0.25rem;
         float: left;
     }
-    >button{
+    >button {
         border-radius: 5px;
         float: right;
     }
 }
+
 //公益
-.charity_img{
+.charity_img {
     max-width: 100%;
 }
+
 //公益新闻标题
-.charity_tit{
+.charity_tit {
     line-height: 1rem;
     background: #f5f5f5;
     overflow: hidden;
-    >h2{
+    >h2 {
         font-size: 0.4rem;
         border-left: 0.1rem solid #3385ff;
         text-indent: 10px;
         margin: 0.3rem 0;
         float: left;
     }
-    >a{
+    >a {
         font-size: 14px;
         color: #3385ff;
         margin-right: 10px;
@@ -229,65 +274,68 @@ img{
         float: right;
     }
 }
+
 //工艺新闻列表
-.charity_list{
+.charity_list {
     overflow: hidden;
-    p{
+    p {
         width: 76%;
         color: #333;
         white-space: nowrap;
-        text-overflow:ellipsis;
+        text-overflow: ellipsis;
         overflow: hidden;
         float: left;
     }
-    span{
+    span {
         color: #a9a9a9;
         font-size: 0.3rem;
         float: right;
     }
 }
-.charity_list_img{
+
+.charity_list_img {
     width: 94%;
     margin: 0 auto;
     overflow: hidden;
-    a{
+    a {
         width: 32%;
         display: inline-block;
-        img{
+        img {
             max-width: 100%;
         }
     }
 }
 
 //道馆信息
-.dg_banner{
+.dg_banner {
     margin-bottom: 1px;
-    img{
+    img {
         display: block;
     }
 }
-.dg_head{
+
+.dg_head {
     width: 100%;
     color: #fff;
     background: #3385ff;
     padding: 0.3rem 0 0.1rem 3.6%;
     position: relative;
-    >h2{
+    >h2 {
         font-size: 0.46rem;
         font-weight: 400;
     }
-    >h3{
+    >h3 {
         font-size: 0.3rem;
         font-weight: 400;
         margin: 0.2rem 0;
     }
-    .dh_Star{
+    .dh_Star {
         color: #ffaa00;
     }
-    >p{
+    >p {
         color: #fff;
     }
-    .dh_head_Certification{
+    .dh_head_Certification {
         width: 1.39rem;
         height: 1.39rem;
         background: #fff;
@@ -298,49 +346,53 @@ img{
         text-align: center;
         right: 4.9%;
         top: -0.7rem;
-        i{
+        i {
             width: 0.41rem;
             margin-top: 0.22rem;
             display: inline-block;
         }
-        p{
+        p {
             font-size: 0.3rem;
             color: #ffaa00;
             font-weight: bold;
         }
-        .dh_noCertification{
+        .dh_noCertification {
             color: #4479e4;
             line-height: 0.5rem;
             margin-top: 0.2rem;
         }
     }
 }
-.dg_function{
-    i,span{
+
+.dg_function {
+    i,
+    span {
         float: left;
     }
-    i{
+    i {
         font-size: 20px;
     }
-    span{
+    span {
         width: 86%;
         margin-left: 2.5%;
     }
 }
-.dg_jianjie_box{
+
+.dg_jianjie_box {
     border-top: 1px solid #c8c7cc;
     overflow: hidden;
 }
-.dg_title{
+
+.dg_title {
     font-size: 0.34rem;
     border-bottom: 0.01rem dashed #eaeaea;
     padding: 0.3rem 0;
-    span{
+    span {
         padding-left: 0.1rem;
         margin-left: 4%;
         border-left: 0.05rem solid #3385ff;
     }
-    i{
+    i {
         font-size: 0.26rem;
         color: #fff;
         background: #ffaa00;
@@ -349,10 +401,12 @@ img{
         margin: 0 1% 0 3%;
     }
 }
-.dg_title_border{
+
+.dg_title_border {
     border-bottom: none;
 }
-.dg_p{
+
+.dg_p {
     width: 94%;
     font-size: 0.3rem;
     color: #333;
@@ -361,84 +415,89 @@ img{
     text-align: justify!important;
     margin: 0.15rem auto;
 }
-.dg_scroll{
+
+.dg_scroll {
     width: 100%;
     height: 1.7rem;
     overflow-x: auto;
     white-space: nowrap;
-    ::-webkit-scrollbar{width:0px}
-    a{
+     ::-webkit-scrollbar {
+        width: 0px
+    }
+    a {
         max-width: 25%;
         width: auto;
         margin-left: 2.5%;
         display: inline-block;
     }
 }
-.dg_table{
+
+.dg_table {
     width: 100%;
     text-align: center;
-    th{
+    th {
         line-height: 1rem;
         font-size: 0.35rem;
         color: #666;
         font-weight: bold;
         background: #f5f5f5;
     }
-    tbody{
+    tbody {
         font-size: 0.3rem;
-        b{
+        b {
             margin-right: 0.1rem;
         }
-        tr{
-            td{
+        tr {
+            td {
                 height: 1rem;
                 line-height: 0.4rem;
                 padding: 0.2rem 0;
-                &:nth-child(1){
+                &:nth-child(1) {
                     width: 40%;
                 }
-                &:nth-child(2){
+                &:nth-child(2) {
                     padding: 0.2rem 0.05rem;
                     width: 45%;
                 }
-                &:nth-child(3){
+                &:nth-child(3) {
                     width: 15%;
                 }
             }
-            &:nth-child(odd){
+            &:nth-child(odd) {
                 background: #fff;
             }
-            &:nth-child(even){
+            &:nth-child(even) {
                 background: #f5f5f5;
             }
         }
     }
 }
-.dg_list{
-    ul{
+
+.dg_list {
+    ul {
         padding: 0;
         margin: 0;
     }
-    li{
+    li {
         list-style-type: none;
         border-bottom: 1px solid #e0e0e0;
         padding: 0 0.2rem;
         margin-top: 0.3rem;
         overflow: hidden;
-        >div{
+        >div {
             width: 80%;
             float: left;
-            h2{
+            h2 {
                 font-size: 0.32rem;
-                white-space:nowrap; 
-                text-overflow:ellipsis;
-                overflow:hidden; 
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
-            p{
+            p {
                 font-size: 0.25rem;
             }
         }
-        button{
+        button {
             font-size: 0.3rem;
             color: #fff;
             background: #ffaa00;
@@ -450,24 +509,26 @@ img{
 }
 
 //道馆当前位置
-.map{
+.map {
     width: 100%;
     height: 4.4rem;
 }
-.Area{
+
+.Area {
     padding: 0.3rem 0;
     background: #fff;
     border-bottom: 1px solid #eaeae9;
     margin-bottom: 0.15rem;
 }
-.dg_map_list{
+
+.dg_map_list {
     background: #fff;
     border-top: 1px solid #eaeae9;
     border-bottom: 1px solid #eaeae9;
     padding: 0.15rem 0.2rem;
     margin-bottom: 0.15rem;
     overflow: hidden;
-    .dg_map_num{
+    .dg_map_num {
         width: 0.4rem;
         height: 1rem;
         text-align: center;
@@ -475,79 +536,66 @@ img{
         background-size: 100% auto;
         -webkit-background-size: 100% auto;
         float: left;
-        span{
+        span {
             font-size: 0.24rem;
             color: #fff;
             display: block;
         }
     }
-    .dg_map_con{
+    .dg_map_con {
         width: 92%;
         margin-left: 2%;
         float: left;
-        .dg_map_tit{
+        .dg_map_tit {
             overflow: hidden;
-            p{
+            p {
                 color: #3385ff;
             }
-            .dg_map_name{
+            .dg_map_name {
                 width: 66%;
                 font-size: 0.3rem;
                 float: left;
             }
-            .dg_map_certification{
+            .dg_map_certification {
                 font-size: 0.24rem;
                 float: right;
-                span{
+                span {
                     color: #f54336;
                 }
             }
         }
-        .dg_map_text{
+        .dg_map_text {
             width: 76%;
             margin-right: 0.2rem;
             float: left;
             overflow: hidden;
-            p{
+            p {
                 font-size: 0.24rem;
                 color: #666;
                 line-height: 0.4rem;
                 margin-bottom: 0.1rem;
-//              white-space: nowrap;
-                a{
+                //              white-space: nowrap;
+                a {
                     color: #666;
                 }
             }
         }
-        .dg_map_logo{
+        .dg_map_logo {
             width: 1.24rem;
             height: 100%;
             float: left;
         }
     }
 }
+
 //道馆活动记录
-.dg_record{
-    h4{
+.dg_record {
+    h4 {
         font-weight: 400;
         font-size: 0.35rem;
         margin-top: 0;
     }
-    p{
+    p {
         font-size: 0.3rem;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
