--- a/css/training.less
+++ b/css/training.less
@@ -125,7 +125,6 @@ img {
         line-height: 30px;
     }
     >div {
-        line-height: 30px;
         overflow: hidden;
         >i {
             width: 30px;
@@ -133,20 +132,35 @@ img {
         }
         >p {
             color: #666;
-            font-size: 16px;
             display: inline-block;
         }
         >span {
+            width: 72%;
+            line-height: 0.4rem;
             color: #999;
             font-size: 14px;
             float: right;
         }
     }
 }
-
+@media screen and (min-width:321px) and (max-width:375px){
+    .peixun_info {
+    >div {
+        >span {
+            width: 66%;
+        }
+    }
+}
+}
 //培训信息
+.peixunCon_box{
+    button{
+        margin-top: 0.5rem;
+    }
+}
 .peixun_new {
-    margin-top: 25px;
+    padding-top: 25px;
+    margin: 0 0 10px;
     >h2 {
         line-height: 30px;
         >i {
@@ -161,6 +175,9 @@ img {
     >p {
         text-indent: 30px;
     }
+}
+.peixun_info{
+    border-top: 10px solid #efeff4;
 }
 
 //报名input
