--- a/css/attestation.css
+++ b/css/attestation.css
@@ -1,3 +1,6 @@
+html,body{
+	height: 100%;
+}
 .attestationBox{
 	background:#f5f5f5;
 	height:100%;
@@ -17,7 +20,7 @@
 	color:#666;
 }
 .attestationBox .selectInput input{
-	width:90%;
+	width:98%;
 	height:0.84rem;
 	line-height:0.86rem;
 	border:1px solid  #eaeae9;
@@ -25,8 +28,11 @@
 	-webkit-border-radius:0.1rem;
 	-moz-border-radius:0.1rem;
 	background:#fff;
-	padding:0.05rem 0.2rem;
+	padding: 0;
+	margin: 0  auto;
+	display: inline-block;
 	font-size:0.3rem;
+	text-align: center;
 }
 .attestationSelectButton #inquireBtn{
 	display: block;
