--- a/css/announceDetail.css
+++ b/css/announceDetail.css
@@ -20,3 +20,11 @@
 	line-height:0.42rem;
 	text-indent: 2em;
 }
+.announceDetailTil img{
+	max-width: 100%;
+	display: block;
+}
+img{
+	max-width: 100%;
+	display: block;
+}
