--- a/css/training.css
+++ b/css/training.css
@@ -114,10 +114,10 @@ img {
 }
 .peixun_info > div > span {
   width: 72%;
-  line-height: 0.4rem;
   color: #999;
   font-size: 14px;
   float: right;
+  padding-top: 3px;
 }
 @media screen and (min-width: 321px) and (max-width: 375px) {
   .peixun_info > div > span {
@@ -146,7 +146,7 @@ img {
   text-indent: 30px;
 }
 .peixun_info {
-  border-top: 10px solid #efeff4;
+  
 }
 .peixun_Input {
   border: 1px solid #c8c7cc;
