新闻评论列表详情

--- a/css/iconfont.css
+++ b/css/iconfont.css
@@ -33,6 +33,8 @@
 
 .icon-xing1:before { content: "\e70e"; }
 
+.icon-dianzan:before { content: "\e619"; }
+
 .icon-huiyuan:before { content: "\e693"; }
 
 .icon-shijian:before { content: "\e613"; }
