--- a/css/newsArea.css
+++ b/css/newsArea.css
@@ -14,7 +14,9 @@ body {
 	flex-direction: column;
 	height: 100%;
 }
-
+.mui-scroll{
+	height: 100%;
+}
 .supDelate {
 	position: absolute;
 	right: 3px;
