--- a/css/identifyresult.css
+++ b/css/identifyresult.css
@@ -10,7 +10,7 @@
 .identifyImg{
 	width:100%;
 	height:3.5rem;
-	background:url(../img/memberBg.png) no-repeat center center;
+	background:url(../images/memberBg.png) no-repeat center center;
 	background-size:100% 100%;	
 }
 .resultShowTil{
@@ -28,7 +28,7 @@
 	position:absolute;
 	left:0.3rem;
 	top:0.2rem;
-	background:url(../img/back.png) no-repeat center center;
+	background:url(../images/back.png) no-repeat center center;
 	background-size:100% 100%;
 }
 .memberImage{
