--- a/css/newsDetailPage.css
+++ b/css/newsDetailPage.css
@@ -87,7 +87,7 @@ img{
 	display:inline-block;
 	width:0.26rem;
 	height:0.26rem;
-	background:url(../img/good.png) no-repeat center center;
+	background:url(../images/good.png) no-repeat center center;
 	background-size:100% 100%;
 	margin-right:0.18rem;
 }
