--- a/css/training.css
+++ b/css/training.css
@@ -199,9 +199,9 @@ img {
   -webkit-box-orient: vertical;
 }
 .saishi_text > h2 {
-  font-size: 0.34rem;
-  height: 0.95rem;
-  line-height: 0.5rem;
+  font-size:11px;
+  height: 18px;
+  line-height: 18px;
   font-weight: bold;
   margin-top: 1px;
 }
@@ -210,6 +210,11 @@ img {
   line-height: 0.4rem;
   font-size: 0.28rem;
 }
+
+.content{
+	
+}
+
 .saishi_time {
   margin: 5px 0 10px;
   overflow: hidden;
