--- a/css/training.css
+++ b/css/training.css
@@ -200,7 +200,7 @@ img {
   -webkit-box-orient: vertical;
 }
 .saishi_text > h2 {
-  font-size:11px;
+  font-size:0.29rem;
   height: 18px;
   line-height: 18px;
   font-weight: bold;
