--- a/css/training.css
+++ b/css/training.css
@@ -195,7 +195,7 @@ img {
 .saishi_text .mui-text-justify {
   overflow: hidden;
   text-overflow: ellipsis;
-  display: -webkit-box;
+  /*display: -webkit-box;*/
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
@@ -208,7 +208,7 @@ img {
     margin-top: 1px;
 }
 .saishi_text > .mui-text-justify {
-     height: 0.8rem;
+   /*  height: 0.8rem;*/
     color: #616161;
     line-height: 0.4rem;
     font-size: 0.27rem;
