--- a/css/newsDetailPage.css
+++ b/css/newsDetailPage.css
@@ -46,10 +46,10 @@ img{
 	text-indent: 2em;
 }
 .newsDetailComments{
-	flex:1;
-	-webkit-flex:1;
-	border:1px solid #dddddd;
-	border-bottom:0;
+	/*flex:1;
+	-webkit-flex:1;*/
+	/*border:1px solid #dddddd;*/
+	/*border-bottom:0;*/
 	padding:0 0.3rem;
 	
 }
