--- a/css/newsDetailPage.css
+++ b/css/newsDetailPage.css
@@ -1,7 +1,7 @@
-/*img{
+img{
 	max-width: 100%;
 	display: block;
-}*/
+}
 .newsDetailPage{
 	/*display: flex;
 	display: -webkit-flex;
@@ -46,10 +46,10 @@
 	text-indent: 2em;
 }
 .newsDetailComments{
-	/*flex:1;
-	-webkit-flex:1;*/
-	/*border:1px solid #dddddd;*/
-	/*border-bottom:0;*/
+	flex:1;
+	-webkit-flex:1;
+	border:1px solid #dddddd;
+	border-bottom:0;
 	padding:0 0.3rem;
 	
 }
