--- a/css/newsDetailPage.css
+++ b/css/newsDetailPage.css
@@ -7,7 +7,7 @@ img{
 	display: -webkit-flex;
 	flex-direction: column;*/
 }
-/*.newsDetailTile{
+.newsDetailTile{
 	font-size:0.34rem;
 	color:#333;
 	line-height:0.5rem;
@@ -21,6 +21,8 @@ img{
 	font-size:0.24rem;
 	color:#999;
 }
+
+/*
 .newsImgBox{
 	
 }
