--- a/css/newsDetailPage.css
+++ b/css/newsDetailPage.css
@@ -7,7 +7,7 @@ img{
 	display: -webkit-flex;
 	flex-direction: column;*/
 }
-/*.newsDetailTile{
+.newsDetailTile{
 	font-size:0.34rem;
 	color:#333;
 	line-height:0.5rem;
@@ -20,7 +20,7 @@ img{
 .newsDetailTime{
 	font-size:0.24rem;
 	color:#999;
-}*/
+}
 
 /*
 .newsImgBox{
