--- a/css/newsDetailPage.css
+++ b/css/newsDetailPage.css
@@ -2,11 +2,7 @@ img{
 	max-width: 100%;
 	display: block;
 }
-.newsDetailPage{
-	/*display: flex;
-	display: -webkit-flex;
-	flex-direction: column;*/
-}
+
 .newsDetailTile{
 	font-size:0.34rem;
 	color:#333;
@@ -48,8 +44,8 @@ img{
 	text-indent: 2em;
 }*/
 .newsDetailComments{
-	/*flex:1;
-	-webkit-flex:1;*/
+	flex:1;
+	-webkit-flex:1;
 	border:1px solid #dddddd;
 	border-bottom:0;
 	padding:0 0.3rem;
