--- a/css/newsDetailPage.css
+++ b/css/newsDetailPage.css
@@ -1,4 +1,4 @@
-img{
+/*img{
 	max-width: 100%;
 	display: block;
 }
@@ -16,7 +16,7 @@ img{
 .newsDetailTime{
 	font-size:0.24rem;
 	color:#999;
-}
+}*/
 
 /*
 .newsImgBox{
