--- a/css/newsDetailPage.css
+++ b/css/newsDetailPage.css
@@ -1,4 +1,4 @@
-/*img{
+img{
 	max-width: 100%;
 	display: block;
 }
@@ -16,9 +16,8 @@
 .newsDetailTime{
 	font-size:0.24rem;
 	color:#999;
-}*/
+}
 
-/*
 .newsImgBox{
 	
 }
@@ -42,7 +41,7 @@
 	font-size:0.28rem;
 	color:#333;
 	text-indent: 2em;
-}*/
+}
 .newsDetailComments{
 	border:1px solid #dddddd;
 	border-bottom:0;
