--- a/css/newsArea.css
+++ b/css/newsArea.css
@@ -9,10 +9,10 @@ body {
 .newsAera {
 	padding: 0 0.2rem;
 	width: 100%;
-	display: flex;
+	/*display: flex;
 	display: -webkit-flex;
 	flex-direction: column;
-	height: 100%;
+	height: 100%;*/
 }
 .mui-scroll{
 	height: 100%;
@@ -72,8 +72,8 @@ body {
 }
 
 .compileChannel {
-	flex: 1;
-	-webkit-flex: 1;
+	/*flex: 1;
+	-webkit-flex: 1;*/
 }
 
 .dynamicallyAdd {
