--- a/css/newsArea.css
+++ b/css/newsArea.css
@@ -7,7 +7,7 @@ body {
 }
 
 .newsAera {
-	padding: 0 0.2rem;
+	/*padding: 0 0.2rem;*/
 	width: 100%;
 	/*display: flex;
 	display: -webkit-flex;
@@ -77,7 +77,7 @@ body {
 }
 
 .dynamicallyAdd {
-	min-height: 1.48rem;
+	min-height: 1rem;
 }
 
 .compileAddChannelTile {
