表格宽度适应

--- a/css/announceDetail.css
+++ b/css/announceDetail.css
@@ -21,7 +21,7 @@
 	font-size:0.28rem;
 	color:#1d0101;
 	line-height:0.42rem;
-	text-indent: 2em;
+	// text-indent: 2em;
 }
 .announceDetailTil img{
 	max-width: 100%;
